--- a/requirements.txt
+++ b/requirements.txt
@@ -234,7 +234,7 @@ rfc3986-validator==0.1.1
 scipy==1.10.1
 seaborn==0.12.2
 Send2Trash==1.8.0
-six @ file:///AppleInternal/BuildRoot/Library/Caches/com.apple.xbs/Sources/python3/python3-110/six-1.15.0-py2.py3-none-any.whl
+six==1.15.0
 sniffio==1.3.0
 soupsieve==2.4
 stack-data==0.6.2
