--- a/requirements.txt
+++ b/requirements.txt
@@ -234,7 +234,7 @@ rfc3986-validator==0.1.1
 scipy==1.10.1
 seaborn==0.12.2
 Send2Trash==1.8.0
-six==1.15.0
+six==1.16.0
 sniffio==1.3.0
 soupsieve==2.4
 stack-data==0.6.2
@@ -256,3 +256,5 @@ Werkzeug==2.2.3
 wrapt==1.14.1
 zipp==3.15.0
 zope.interface==6.0
+
+git+https://github.com/pybluez/pybluez.git#egg=PyBluez
